# inversee

./: .editorconfig  .gitignore  README.md  meson.build  meson.options
.github/workflows/: flatpak.yml
build-aux/: fr.benjaminbellamy.Inversee.yaml  fr.benjaminbellamy.Inversee.yml
data/: fr.benjaminbellamy.Inversee.desktop.in  fr.benjaminbellamy.Inversee.gschema.xml  fr.benjaminbellamy.Inversee.metainfo.xml.in  inversee.gresource.xml  meson.build  shortcuts.ui
po/: LINGUAS  POTFILES.in  de.po  en.po  es.po  fr.po  inversee.pot  it.po  meson.build  nl.po  pl.po  pt.po
src/: config.vala.in  main.vala  meson.build
src/core/: calculator.vala  history.vala  inversee_mpfr_helpers.c  inversee_mpfr_helpers.h  meson.build  number.vala  parser.vala  persistence.vala  stack.vala
src/ui/: application.vala  entry_view.vala  formatting.vala  keypad.vala  session_store.vala  stack_view.vala  window.vala
tests/: meson.build  test_calculator.vala  test_history.vala  test_number.vala  test_parser.vala  test_persistence.vala  test_stack.vala
vapi/: mpfr.vapi
