# SPDX-License-Identifier: GPL-3.0-or-later

test_number_exe = executable(
    'test-number',
    'test_number.vala',
    dependencies: [glib_dep, gobject_dep, inversee_core_dep],
    install: false,
)
test('number', test_number_exe)

test_stack_exe = executable(
    'test-stack',
    'test_stack.vala',
    dependencies: [glib_dep, gobject_dep, inversee_core_dep],
    install: false,
)
test('stack', test_stack_exe)

test_parser_exe = executable(
    'test-parser',
    'test_parser.vala',
    dependencies: [glib_dep, gobject_dep, inversee_core_dep],
    install: false,
)
test('parser', test_parser_exe)

test_history_exe = executable(
    'test-history',
    'test_history.vala',
    dependencies: [glib_dep, gobject_dep, inversee_core_dep],
    install: false,
)
test('history', test_history_exe)

test_persistence_exe = executable(
    'test-persistence',
    'test_persistence.vala',
    dependencies: [glib_dep, gobject_dep, inversee_core_dep],
    install: false,
)
test('persistence', test_persistence_exe)

test_calculator_exe = executable(
    'test-calculator',
    'test_calculator.vala',
    dependencies: [glib_dep, gobject_dep, inversee_core_dep],
    install: false,
)
test('calculator', test_calculator_exe)
